# AndroidTrackpad

./: LICENSE  README.md
Android/: README.md
Android/Trackpad/: .gitignore  settings.gradle
Android/Trackpad/app/: .gitignore  build.gradle
Android/Trackpad/app/src/androidTest/java/com/example/trackpad/: ExampleInstrumentedTest.java
Android/Trackpad/app/src/main/: AndroidManifest.xml
Android/Trackpad/app/src/main/java/com/example/trackpad/: MainActivity.java  TrackpadActivity.java  myBthManager.java  myWifiManager.java
Android/Trackpad/app/src/main/res/layout/: activity_main.xml  activity_trackpad.xml
Android/Trackpad/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_trackpad.xml
Android/Trackpad/app/src/main/res/values/: ic_launcher_trackpad_background.xml  strings.xml
Android/Trackpad/app/src/test/java/com/example/trackpad/: ExampleUnitTest.java
Linux/: .gitignore  CMakeLists.txt  README.md
Linux/include/: myBthHelper.hpp  myTrackpadHelper.hpp  myUI.hpp  myWifiHelper.hpp
Linux/src/: main.cpp  myBthHelper.cpp  myTrackpadHelper.cpp  myUI.cpp  myWifiHelper.cpp
Windows/: .gitignore  README.md
Windows/trackpad_service/: main.cpp  main.hpp  myBthHelper.cpp  myBthHelper.hpp  myTrackpadHelper.cpp  myTrackpadHelper.hpp  myTransfer.cpp  myTransfer.hpp  myUI.cpp  myUI.hpp  myWifiHelper.cpp  myWifiHelper.hpp  resource.h  trackpad_service.aps  trackpad_service.rc  trackpad_service.sln  trackpad_service.vcxproj  trackpad_service.vcxproj.filters
